[package]
name = "mdbook-chapter-path"
version = "0.1.0"
authors = ["Rachel Brindle <rachel@rachelbrindle.com>"]
edition = "2018"
description = "mdBook preprocessor providing paths from names of chapters"
homepage = "https://github.com/younata/mdbook-chapter-path"
repository = "https://github.com/younata/mdbook-chapter-path"
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "^0.4"
serde_json = "^1.0.0"
regex = "1.5.4"
toml = "0.5.7"
clap = "2.33.3"
